--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
     compile("org.springframework.cloud:spring-cloud-starter-hystrix")
+    compile("org.springframework.cloud:spring-cloud-starter-feign")
 
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
